--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div class="container">
         <div class="destination-container">
+        	<h1>these are one of the most beautiful destination</h1>
             <div class="destination" id="florida">
                 <h2>Florida</h2>
             </div>
